<resources>
    <string name="app_name">Loginid</string>
    <string name="title_activity_new_request">NewRequest</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="my_request">My Request</string>
    <string name="filter">FILTER</string>
    <string name="showing_approved_requests">Showing approved requests.</string>
    <string name="todo">TODO</string>
    <string name="login">Login</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_request">NEW REQUEST</string>
    <string name="title_activity_requisition1">Requisition1</string>
    <string name="title_activity_main_request_fragment">MainRequestFragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_request_view">RequestView</string>
    <string name="title_activity_requisitiontwo">Requisitiontwo</string>


</resources>
