<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".NewRequest"
    tools:showIn="@layout/app_bar_new_request" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout4"
            android:layout_width="378dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/constraint3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="155dp"
                android:layout_height="27dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="40dp"
                android:text="@string/my_request"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/newrequestbutton"
                android:layout_width="108dp"
                android:layout_height="35dp"
                android:layout_marginStart="56dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/request"
                android:text="@string/title_activity_new_request"
                android:textColor="@android:color/white"
                app:layout_constraintStart_toEndOf="@+id/textView6"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv1"
                android:layout_width="84dp"
                android:layout_height="33dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="56dp"
                android:text="@android:string/search_go"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <ImageView
                android:id="@+id/img1"
                android:layout_width="63dp"
                android:layout_height="38dp"
                android:layout_marginStart="128dp"
                android:layout_marginTop="48dp"
                android:contentDescription="@string/todo"
                app:layout_constraintStart_toEndOf="@+id/tv1"
                app:layout_constraintTop_toBottomOf="@+id/newrequestbutton"
                app:srcCompat="@drawable/icon" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="314dp"
                android:layout_height="50dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="39dp"
                android:background="@drawable/search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newrequestbutton">

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout4">

            <ImageView
                android:id="@+id/filter"
                android:layout_width="61dp"
                android:layout_height="69dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="26dp"
                android:contentDescription="@string/todo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/v" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="73dp"
                android:layout_height="28dp"
                android:layout_marginStart="21dp"
                android:layout_marginTop="26dp"
                android:text="@string/filter"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/filter"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                android:layout_marginTop="21dp"
                android:text="@string/showing_approved_requests"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/filter"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="392dp"
            android:layout_height="303dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout5">

            <ListView
                android:id="@+id/lv"
                android:layout_width="match_parent"
                android:layout_height="287dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>